objects/Account_Division_Data_Config__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Set__c</fullName>
        <label>Attribute Set</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlling_Field__c</fullName>
        <inlineHelpText>The API name of the controlling field</inlineHelpText>
        <label>Controlling Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlling_Value__c</fullName>
        <inlineHelpText>When the controlling field has this value, the picklist values given in this row will be available</inlineHelpText>
        <label>Controlling Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Picklist_Values__c</fullName>
        <label>Picklist Values</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Synch_to_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synch to Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>multivalue picklist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Marketing Attribute Setup</label>
    <listViews>
        <fullName>Account_Attributes</fullName>
        <columns>Division__c</columns>
        <columns>Attribute_Set__c</columns>
        <columns>Attribute__c</columns>
        <columns>Type__c</columns>
        <columns>Picklist_Values__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_Type__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>*Account Attributes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contact_Attributes</fullName>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <columns>Attribute_Set__c</columns>
        <columns>Attribute__c</columns>
        <columns>Type__c</columns>
        <columns>Picklist_Values__c</columns>
        <columns>ID__c</columns>
        <columns>Synch_to_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_Type__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>*Contact Attributes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cooling</fullName>
        <columns>NAME</columns>
        <columns>Object_Type__c</columns>
        <columns>Attribute__c</columns>
        <columns>Attribute_Set__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Set__c</field>
            <operation>equals</operation>
            <value>Cooling</value>
        </filters>
        <label>Cooling</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>District_Energy</fullName>
        <columns>NAME</columns>
        <columns>Object_Type__c</columns>
        <columns>Attribute__c</columns>
        <columns>Attribute_Set__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Set__c</field>
            <operation>equals</operation>
            <value>District Energy</value>
        </filters>
        <label>District Energy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Drives</fullName>
        <columns>NAME</columns>
        <columns>Object_Type__c</columns>
        <columns>Attribute__c</columns>
        <columns>Attribute_Set__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Set__c</field>
            <operation>equals</operation>
            <value>Drives</value>
        </filters>
        <label>Drives</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Heating_Solutions</fullName>
        <columns>NAME</columns>
        <columns>Object_Type__c</columns>
        <columns>Attribute__c</columns>
        <columns>Attribute_Set__c</columns>
        <columns>Picklist_Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Set__c</field>
            <operation>equals</operation>
            <value>Heating Solutions,Heating</value>
        </filters>
        <label>Heating Solutions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Account Attribute ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Attribute Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>